tests/invalid/after_end_module.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module after_end_module.

:- interface.

:- type foo == int.

:- end_module after_end_module.

:- type bar == int.
